--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-Requirement Documents
-
-MAD I
-
-Project Document:
-
-https://docs.google.com/document/d/e/2PACX-1vQXZXcz4tZukKB1SY1YgFBwQsc_gAgfr822JmzvhJMnOC-kc1mXzyguVmWoOtXpykO1spBO8VHsEVap/pub
-
-Project statement - Vehicle Parking App - V1
-
-https://docs.google.com/document/d/e/2PACX-1vR9h1TDBhntxl1XA3tWalsCSVw_tqw8dUZ6TtXotYHwfAmtC_GHDTCq_NakeJuP_EKQFR2JIubjnmiH/pub
+Flask==3.1.2
+flask-restx==1.3.2
+bcrypt==5.0.0
+python-dotenv==1.1.1
+Werkzeug==3.1.3
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+itsdangerous==2.2.0
+click==8.3.0
+blinker==1.9.0
+attrs==25.4.0
+jsonschema==4.25.1
+aniso8601==10.0.1
+gunicorn==21.2.0
